add and remove car image
